--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 class="home-title">The future starts here</h1>
     <br>
     <br/>
-    <div class="mdp-card card-shadow">
+    <div class="card card-shadow">
      
     </div>
     
