--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="https://jono292.github.io/material-design-plus/css/style.css">
   <style type="text/css">
    .card-shadow {
+     color: black;
      -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 18px 3px;
     -moz-box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 18px 3px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 5p
+      
     }
   </style>
   </head>
