--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Jonathan Lu</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="https://jono292.github.io/material-design-plus/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style type="text/css">
    .card-shadow {
      color: black;
