--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Jonathan Lu</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://jono292.github.io/material-design-plus/css/style.css">
+ 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style type="text/css">
    .card-shadow {
@@ -27,7 +27,7 @@
     <br>
     <br/>
     <div class="card card-shadow">
-     <h1 class="mdp-card-title">Coming Soon<h1>
+     <h1 class="mdp-card-title">Coming Soon</h1>
       <p class="mdp-card-body">This website is currently under development. Why not enjoy some music instead?</p>
        <br/>
        <div id="music-player">
