--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Jonathan Lu</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
- 
+ <link rel="stylesheet" href="https://chrome.google.com/_/scs/cws-static/_/ss/k=cws.main.vaDhtMPqwCU.L.W.O/am=AQ/d=0/rs=AAxzQIUkrZmt5MHIRkF-UFb55sx-Isujtg">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style type="text/css">
    .card-shadow {
@@ -27,10 +27,14 @@
     <br>
     <br/>
     <div class="card card-shadow">
-     <h1 class="mdp-card-title">Coming Soon</h1>
-      <p class="mdp-card-body">This website is currently under development. Why not enjoy some music instead?</p>
+     <h1 class="mdp-card-title">About Me</h1>
+      <p class="mdp-card-body">My name is Jonathan Lu. I make web apps with HTML5, CSS and JS. I use Material Design quite a lot. <br/>
+      I also do Photoshop and InDesign work, creating posters for my old school and designing branding for my social media.</p>
        <br/>
-       <div id="music-player">
+       <div role="button" class="dd-Va g-c-wb g-eg-ua-Uc-c-za g-c-Oc-td-jb-oa g-c" aria-label="Add to Chrome" tabindex="0" style="user-select: none;">
+         <div class="g-c-Hf">
+           <div class="g-c-x">
+             <div class="g-c-R  webstore-test-button-label">Contact Me</div></div></div></div>
        </div>
     </div>
     
