--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br/>
     <div class="card card-shadow">
      <h1 class="mdp-card-title">About Me</h1>
-      <p class="mdp-card-body">My name is Jonathan Lu. I make web apps with HTML5, CSS and JS. I use Material Design quite a lot. <br/>
+      <p class="mdp-card-body">My name is Jonathan Lu. I make web apps with HTML5, CSS and JS. <br/>
       I also do Photoshop and InDesign work, creating posters for my old school and designing branding for my social media.</p>
        <br/>
        <div role="button" class="dd-Va g-c-wb g-eg-ua-Uc-c-za g-c-Oc-td-jb-oa g-c" aria-label="Add to Chrome" tabindex="0" style="user-select: none;">
