--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div role="button" class="dd-Va g-c-wb g-eg-ua-Uc-c-za g-c-Oc-td-jb-oa g-c" aria-label="Add to Chrome" tabindex="0" style="user-select: none;">
          <div class="g-c-Hf">
            <div class="g-c-x">
-             <div class="g-c-R  webstore-test-button-label">Contact Me</div></div></div></div>
+             <a class="mdp-card-body">Contact Me</a></div></div></div>
        </div>
     </div>
     
