--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Jonathan Lu</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
-
+<link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/47552822?s=88&v=4">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style type="text/css">
    .card-shadow {
